# ai-protector-web-extension

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  UPSTREAM.md  package.json
engine/apps/agent-demo/: Dockerfile  pyproject.toml
engine/apps/agent-demo/src/: config.py  main.py  schemas.py  session.py
engine/apps/agent-demo/src/agent/: graph.py  mock_llm.py  state.py
engine/apps/agent-demo/src/agent/limits/: config.py  service.py
engine/apps/agent-demo/src/routers/: chat.py  health.py  traces.py
engine/apps/agent-demo/tests/: conftest.py  test_arg_validation.py  test_chat_endpoint.py  test_graph.py  test_health.py  test_integration.py  test_intent.py  test_limits.py  test_llm_call_transport.py  test_mock_llm.py  test_policy_check.py  test_post_tool_gate.py  test_pre_tool_gate.py  test_rbac.py  test_resolve_direct_llm.py  test_role_separation.py  test_scan_contract.py  test_scan_via_proxy.py  test_tools.py  test_trace.py  test_trace_store.py
engine/apps/proxy-service/: .dockerignore  Dockerfile  _poll_benchmark.py  alembic.ini  pyproject.toml  requirements-self-hosted.txt
engine/apps/proxy-service/alembic/: env.py
engine/apps/proxy-service/alembic/versions/: 07ffe5e3695f_aw_003_agent_generated_config.py  10106fb845f3_aw_005_validation_runs.py  a06c6c7cb3dd_initial_schema.py  a1b2c3d4e5f6_aw_006_traces_incidents_gates_promotions.py  b1e2f3a4c5d6_add_pipeline_jsonb_columns.py  b2c3d4e5f6a7_aw_007_agent_trace_runs.py  c3d4e5f6a7b8_add_rule_action_severity_description.py  c4d5e6f7a8b9_add_raw_response_body_column.py  d2d2cf58b4c5_aw_004_agent_generated_kit.py  d5e6f7a8b9c0_add_protection_detected_columns.py  f064246659bb_aw_002_tools_roles_permissions.py  f7dedf9f10fa_aw_001_agents.py
engine/apps/proxy-service/benchmarks/: __init__.py  bench_e2e.py  bench_jailbreakbench.py  bench_latency.py  bench_memory.py  bench_security.py  common.py  generate_report.py
engine/apps/proxy-service/data/red-team/: _validate.py  _validate_pack.py  _validate_v2.py
engine/apps/proxy-service/data/scenarios/: agent.json  compare.json  playground.json
engine/apps/proxy-service/scripts/: merge_attacks_to_pack.py  warmup_scanners.py
engine/apps/proxy-service/src/: config.py  dependencies.py  logging.py  main.py  main_self_hosted.py
engine/apps/proxy-service/src/db/: seed.py  session.py
engine/apps/proxy-service/src/llm/: __init__.py  client.py  exceptions.py  mock_provider.py  providers.py  streaming.py
engine/apps/proxy-service/src/models/: __init__.py  base.py  denylist.py  policy.py  request.py
engine/apps/proxy-service/src/pipeline/: __init__.py  graph.py  runner.py  scan_runner.py  state.py
engine/apps/proxy-service/src/red_team/: __init__.py  net.py
engine/apps/proxy-service/src/routers/: analytics.py  chat.py  direct.py  health.py  models.py  policies.py  requests.py  rules.py  scan.py  scenarios.py
engine/apps/proxy-service/src/schemas/: __init__.py  analytics.py  chat.py  health.py  models.py  policy.py  policy_config.py  request.py  rule.py  scenarios.py
engine/apps/proxy-service/src/scripts/: __init__.py
engine/apps/proxy-service/src/services/: denylist.py  langfuse_client.py  policy_config.py  request_logger.py
engine/apps/proxy-service/src/wizard/: __init__.py  models.py  router.py  schemas.py  seed.py
engine/apps/proxy-service/tests/: conftest.py  test_analytics.py  test_chat_endpoint.py  test_chat_schemas.py  test_config.py  test_decision_transform.py  test_decision_with_scanners.py  test_denylist_service.py  test_direct.py  test_graph.py  test_health.py  test_hotreload.py  test_intent_rules.py  test_llm_guard_node.py  test_mock_provider.py  test_models.py  test_nemo_guardrails.py  test_output_filter.py  test_parallel_scanners.py  test_pipeline_parse.py  test_policies_crud.py  test_policy_decision.py  test_policy_validation.py  test_presidio_node.py  test_providers.py  test_request_logger.py  test_requests_router.py  test_rules_coverage.py  test_rules_crud.py  test_rules_pipeline.py  test_scenario_coverage.py  test_scenario_deterministic.py  test_self_hosted_cors.py
engine/apps/proxy-service/tests/pipeline/: test_full_pipeline.py  test_graph_routing.py
engine/apps/proxy-service/tests/red_team/: __init__.py  conftest.py  test_adapters.py  test_api_routes.py  test_auth_secrets.py  test_connection.py  test_engine.py  test_error_states.py  test_evaluators.py  test_export.py  test_heuristic_evaluators.py  test_http_client.py  test_json_text_extractor.py  test_packs.py  test_persistence.py  test_progress.py  test_request_template.py  test_safe_mode.py  test_schemas.py  test_scoring.py  test_stage_evaluation.py
engine/apps/proxy-service/tests/services/: test_langfuse_client.py
engine/apps/proxy-service/tests/wizard/: test_agent_crud.py  test_config_generation.py  test_integration_kit.py  test_kit_variants.py  test_rollout_modes.py  test_tools_roles.py  test_traces.py  test_validation_runner.py
engine/apps/test-agents/langgraph-agent/: Dockerfile  graph.py  main.py  protection.py  pyproject.toml
engine/apps/test-agents/pure-python-agent/: Dockerfile  main.py  protection.py  pyproject.toml
engine/apps/test-agents/pure-python-agent/config/: .gitkeep
(+502 files in other folders)
