[project]
name = "ai-protector-agent-demo"
version = "0.2.5" # x-release-please-version
description = "Customer Support Copilot — demo agent behind the AI Protector firewall"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "langgraph==1.0.10",
    "litellm==1.82.0",
    "httpx==0.28.1",
    "structlog==25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-httpx==0.36.0",
    "ruff==0.15.5",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B007",   # unused-loop-control-variable (test style)
    "B008",   # function-call-in-default-argument (FastAPI Depends)
    "B017",   # assert-raises-exception (test style)
    "E501",   # line-too-long (handled by formatter)
    "SIM102", # collapsible-if (readability)
    "SIM108", # if-else-block-instead-of-if-exp (readability)
    "SIM115", # open-file-with-context-handler (tempfile pattern)
    "SIM117", # multiple-with-statements (readability)
    "UP042",  # replace-str-enum (StrEnum migration)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
