[project]
name = "ai-protector-proxy"
version = "0.2.5" # x-release-please-version
description = "Blue Team LLM Firewall — agentic security pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "sqlalchemy[asyncio]==2.0.48",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "redis[hiredis]==7.3.0",
    "litellm==1.82.0",
    "llm-guard==0.3.16",
    "presidio-analyzer==2.2.358",
    "presidio-anonymizer==2.2.358",
    "nemoguardrails==0.20.0",
    "langgraph==1.0.10",
    "langfuse==3.14.5",
    "structlog==25.5.0",
    "httpx==0.28.1",
    "psutil==7.2.2",
    "Jinja2==3.1.6",
    "weasyprint==63.1",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.5",
    "mypy==1.19.1",
    "aiosqlite==0.20.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",   # function-call-in-default-argument (FastAPI Depends)
    "B017",   # assert-raises-exception (test style)
    "E501",   # line-too-long (handled by formatter)
    "SIM102", # collapsible-if (readability)
    "SIM108", # if-else-block-instead-of-if-exp (readability)
    "SIM115", # open-file-with-context-handler
    "SIM117", # multiple-with-statements
    "UP042",  # replace-str-enum (StrEnum migration)
    "UP046",  # non-pep695-generic-class
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ── CVE overrides for transitive dependencies ──────────────────────────
# llm-guard==0.3.16 pins transformers==4.51.3 and presidio-analyzer==2.2.358
# (which requires cryptography<44.1). fastembed pins pillow<12.0.
# uv override forces safe versions without --no-deps hacks.
[tool.uv]
override-dependencies = [
    "transformers>=4.53.0",    # CVE-2025-3777, CVE-2025-3933, CVE-2025-5197, CVE-2025-6638, CVE-2025-6051, CVE-2025-6921
    "cryptography>=46.0.5",    # CVE-2026-26007
    "pillow>=12.1.1",          # CVE-2026-25990
    "presidio-analyzer>=2.2.361",
    "presidio-anonymizer>=2.2.361",
]
