[project]
name = "test-agent-python"
version = "0.2.5" # x-release-please-version
description = "Pure Python test agent with wizard-generated security configs"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "structlog==25.5.0",
    "litellm==1.82.0",
]

[project.optional-dependencies]
dev = ["pytest==9.0.2", "pytest-asyncio==1.3.0"]
